--- a/res/layout/welcome.xml
+++ b/res/layout/welcome.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fb="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -120,19 +121,21 @@
               
                 android:orientation="horizontal" >
                 
-                 <View
+                  <View
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"
-            />     
+            />      
 
-                <ImageView
-                    android:id="@+id/imageView1"
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    
-                   
-                    android:src="@drawable/fbicon" />
+                <com.facebook.widget.LoginButton
+			         android:id="@+id/authButton"
+			         android:layout_width="80dp"
+			         android:layout_height="80dp"
+			         android:layout_alignParentTop="true"
+			         android:layout_centerHorizontal="true"
+			         android:background="#00000000"
+			         fb:login_text=""
+					fb:logout_text=""/>
             </LinearLayout>
 
             <LinearLayout
